--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "composer/installers": "~1.0.12",
     "vlucas/phpdotenv": "^2.0.1",
     "johnpbloch/wordpress": "4.4",
-    "koodimonni-language/it_it": "*"
+    "koodimonni-language/it_it": "*",
+    "wpackagist-theme/hueman":"*"
   },
   "extra": {
     "installer-paths": {
