--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
     "composer/installers": "~1.0.12",
     "vlucas/phpdotenv": "^2.0.1",
     "johnpbloch/wordpress": "4.4",
+    "koodimonni/composer-dropin-installer": "*",
     "koodimonni-language/it_it": "*",
     "wpackagist-theme/hueman":"*"
   },
