--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "vlucas/phpdotenv": "^2.0.1",
     "johnpbloch/wordpress": "4.4",
     "koodimonni/composer-dropin-installer": "*",
+    "koodimonni-language/it_it": "*",
     "wpackagist-theme/hueman":"*"
   },
   "extra": {
